--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ Nigeria   Personalized Experiences  ">
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About Us </a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Services.html"> Our Services </a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="vision.html"> Our Vision  </a>
+	</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Booking.html"> Book a Space  </a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Management_Solutions.html">Management Solutions </a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact Us </a>
 </li></ul>
